--- a/GMod-SDK/GMod-SDK.vcxproj
+++ b/GMod-SDK/GMod-SDK.vcxproj
@@ -199,12 +199,12 @@
     <ClInclude Include="engine\CMaterialSystem.h" />
     <ClInclude Include="engine\CModelInfo.h" />
     <ClInclude Include="engine\CModelRender.h" />
-    <ClInclude Include="engine\CNetChan.h" />
     <ClInclude Include="engine\CVRenderView.h" />
     <ClInclude Include="engine\gametrace.h" />
     <ClInclude Include="engine\iclientrenderable.h" />
     <ClInclude Include="engine\IEngineTrace.h" />
     <ClInclude Include="engine\imaterial.h" />
+    <ClInclude Include="engine\inetmessage.h" />
     <ClInclude Include="engine\IStudioRender.h" />
     <ClInclude Include="engine\takedamageinfo.h" />
     <ClInclude Include="engine\trace.h" />
@@ -230,11 +230,13 @@
     <ClInclude Include="hooks\FrameStageNotify.h" />
     <ClInclude Include="hooks\PaintTraverse.h" />
     <ClInclude Include="hooks\Present.h" />
+    <ClInclude Include="hooks\ProcessGMODServerToClient.h" />
     <ClInclude Include="hooks\RenderView.h" />
     <ClInclude Include="hooks\RunStringEx.h" />
     <ClInclude Include="lua_shared\CLuaConVars.h" />
     <ClInclude Include="lua_shared\CLuaInterface.h" />
     <ClInclude Include="lua_shared\CLuaShared.h" />
+    <ClInclude Include="mathlib\mathlib.h" />
     <ClInclude Include="mathlib\math_pfns.h" />
     <ClInclude Include="NetVars.h" />
     <ClInclude Include="tier0/Color.h" />
@@ -251,9 +253,11 @@
     <ClInclude Include="Interface.h" />
     <ClInclude Include="json.h" />
     <ClInclude Include="tier0\basetypes.h" />
+    <ClInclude Include="tier0\platform.h" />
     <ClInclude Include="tier0\shareddefs.h" />
     <ClInclude Include="tier0\soundinfo.h" />
     <ClInclude Include="tier0\Vector.h" />
+    <ClInclude Include="tier1\bitbuf.h" />
     <ClInclude Include="tier1\checksum_crc.h" />
     <ClInclude Include="tier1\checksum_md5.h" />
     <ClInclude Include="tier1\KeyValues.h" />
